# rusty-neat

./: .gitattributes  .gitignore  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  ChangeLog.md  LICENSE.md  README.md  THIRDPARTY.yml  add_seq_error_model.patch  neat_out.vcf  simple_template.yml
common/: Cargo.toml
common/common_tests/: integration_tests.rs
common/src/: file_tools.rs  lib.rs  models.rs  mutation_model.rs  neat_rng.rs  quality_scores.rs  seq_err.rs  structs.rs  transition_matrix.rs  utils.rs  variant_classes.rs  vars.rs
common/src/file_tools/: bam_reader.rs  bam_writer.rs  bed_reader.rs  block_gz.rs  fasta_reader.rs  fasta_stream.rs  fasta_tools.rs  fastq_tools.rs  file_io.rs  folder_tools.rs  vcf_tools.rs
common/src/models/: fragment_length.rs  gc_bias_model.rs  indel_model.rs  lib.rs  mutation_model.rs  nucleotides.rs  quality_scores.rs  sequencing_error_model.rs  snp_model.rs  snp_trinuc_model.rs  sv_model_defaults.rs  variant_models.rs
common/src/rng/: mash.rs  mod.rs
common/src/seq_err/: sequencing_error_model.rs  sequencing_errors.rs
common/src/structs/: bed.rs  bed_record.rs  contig_variants.rs  distributions.rs  fasta_map.rs  mutated_map.rs  nucleotides.rs  read_record.rs  sequence_block.rs  sequence_variants.rs  sequencing_errors.rs  sv_model.rs  transition_matrix.rs  variants.rs
common/src/variant_classes/: sequencing_errors.rs  variants.rs
common/src/vars/: variant_models.rs  variants.rs
conda-recipe/: build.sh  (+1 more)
eidolon/: Cargo.toml
eidolon/src/: main.rs
eidolon/src/compare_vcfs/: errors.rs
eidolon/src/compare_vcfs/utils/: attribution.rs  equivalence.rs  report.rs  runner.rs  vcf_writer.rs
eidolon/src/filter_reads/: errors.rs  mod.rs  utils.rs
eidolon/src/filter_reads/utils/: filter_lib.rs
eidolon/src/gen_bam_models/: errors.rs
eidolon/src/gen_bam_models/utils/: config.rs  runner.rs
eidolon/src/gen_cancer_reads/: mod.rs
eidolon/src/gen_cancer_reads/utils/: fastq_merge.rs  runner.rs  vcf_merge.rs
eidolon/src/gen_frag_length_model/: errors.rs  mod.rs
eidolon/src/gen_frag_length_model/utils/: config.rs  runner.rs
eidolon/src/gen_gc_bias_model/: errors.rs
eidolon/src/gen_gc_bias_model/utils/: config.rs  runner.rs
eidolon/src/gen_mut_model/: errors.rs  mod.rs
eidolon/src/gen_mut_model/utils/: config.rs  runner.rs
eidolon/src/gen_reads/: errors.rs  mod.rs  utils.rs
eidolon/src/gen_reads/utils/: config.rs  generate_fragments.rs  generate_variants.rs  runner.rs
eidolon/src/gen_seq_error_model/: errors.rs
eidolon/src/gen_seq_error_model/utils/: config.rs  runner.rs
eidolon/test_data/configs/: neat_test.yml
eidolon/test_data/references/: H1N1.fa  H1N1.fa.fai
eidolon/test_data/vcfs/: small_snps.vcf
eidolon/tests/: allele_fraction_e2e.rs  bnd_fastq.rs  bnd_inv_double_count.rs  bnd_roundtrip.rs  cancer_parity.rs  cancer_reads_e2e.rs  cli_smoke.rs  cnv_chimeric.rs  compare_vcfs_attribution.rs  compare_vcfs_equivalence.rs  compare_vcfs_exact_match.rs  compare_vcfs_reasons_vcf.rs  cosmic_bundle.rs  del_chimeric.rs  determinism.rs  dup_chimeric.rs  fastq_validation.rs  inv_fastq.rs  model_fragment_fidelity.rs  model_output_fidelity.rs  model_parity.rs  multi_sv_integration.rs  per_tissue_sv_models.rs  pipeline_e2e.rs
eidolon/tests/common/: mod.rs
fasta_reader/: Cargo.toml
fasta_reader/src/: bitops_avx2.rs  dna_string.rs  lib.rs  test.rs
generate_reads/: Cargo.toml
generate_reads/model_data/: neat_quality_score_model.json
generate_reads/src/: data.rs  errors.rs  main.rs  utils.rs
generate_reads/src/data/: quality_score_data.rs
generate_reads/src/utils/: apply_variants.rs  cli.rs  config.rs  fasta_tools.rs  fastq_tools.rs  generate_fragments.rs  generate_reads.rs  generate_variants.rs  make_reads.rs  mutate.rs  mutate_fasta.rs  read_models.rs  read_old_data.rs  runner.rs  runner_parallel.rs  vcf_tools.rs
generate_reads/src/utils/test_data/: test_model.json
generate_reads/test_data/configs/: neat_test.yml  neat_test_bad.yml
generate_reads/test_data/references/: small.fa
rneat/: Cargo.toml
rneat/src/: main.rs
rneat/src/compare_vcfs/: errors.rs  mod.rs  utils.rs
rneat/src/compare_vcfs/utils/: attribution.rs  config.rs  equivalence.rs  report.rs  runner.rs  vcf_writer.rs
rneat/src/create_mutation_model/: errors.rs  mod.rs
rneat/src/create_mutation_model/utils/: config.rs  runner.rs
rneat/src/filter_reads/: errors.rs  mod.rs  utils.rs
rneat/src/filter_reads/utils/: config.rs  filter_lib.rs  runner.rs
rneat/src/gen_bam_models/: errors.rs  mod.rs
rneat/src/gen_bam_models/utils/: config.rs  runner.rs
rneat/src/gen_cancer_reads/: errors.rs  mod.rs  utils.rs
rneat/src/gen_cancer_reads/utils/: config.rs  fastq_merge.rs  runner.rs  vcf_merge.rs
rneat/src/gen_frag_length_model/: errors.rs  mod.rs
rneat/src/gen_frag_length_model/utils/: config.rs  runner.rs
rneat/src/gen_gc_bias_model/: errors.rs  mod.rs  utils.rs
rneat/src/gen_gc_bias_model/utils/: config.rs  coverage_reader.rs  fasta_stream.rs  runner.rs
rneat/src/gen_mut_model/: errors.rs  mod.rs
rneat/src/gen_mut_model/utils/: config.rs  runner.rs
rneat/src/gen_reads/: errors.rs  mod.rs  utils.rs
rneat/src/gen_reads/utils/: config.rs  generate_fragments.rs  generate_variants.rs  runner.rs  runner_parallel.rs
rneat/src/gen_seq_error_model/: errors.rs  mod.rs
rneat/src/gen_seq_error_model/utils/: config.rs  runner.rs
rneat/tests/: allele_fraction_e2e.rs  bnd_fastq.rs  bnd_inv_double_count.rs  bnd_roundtrip.rs  cancer_parity.rs  cancer_reads_e2e.rs  cli_smoke.rs  cnv_chimeric.rs  compare_vcfs_attribution.rs  compare_vcfs_phase1.rs  compare_vcfs_phase2.rs  compare_vcfs_phase3.rs  compare_vcfs_phase4.rs  compare_vcfs_reasons_vcf.rs  cosmic_bundle.rs  del_chimeric.rs  determinism.rs  dup_chimeric.rs  fastq_validation.rs  inv_fastq.rs  model_fragment_fidelity.rs  model_output_fidelity.rs  model_parity.rs  multi_sv_integration.rs  per_tissue_sv_models.rs  pipeline_e2e.rs
rneat/tests/common/: mod.rs
simple_rng/: Cargo.toml
simple_rng/src/: lib.rs  mash.rs
(+163 files in other folders)
