[workspace]

members = [
    "generate_reads",
    "common",
    "simple_rng",
]

resolver = "2"

[workspace.package]
version = '1.1.0'
edition = '2024'
authors = ["Joshua Allen"]
description = "Generates a randomly mutated fastq file, along with golden vcf to compare results"
repository = "https://github.com/ncsa/rusty-neat"