[workspace]

members = [
    "rneat",
    "common",
    "simple_rng",
]

resolver = "2"

[workspace.package]
version = '1.2.0'
edition = '2024'
authors = ["Joshua Allen", "Mikolaj Kowalik", "See coauthors of Python Neat versions"]
description = "Toolkit for generating simulated NGS read data in fastq and vcf formats. Feature set under development."
repository = "https://github.com/ncsa/rusty-neat"