[package]
name = "common"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
simple_rng = { path = "../simple_rng" }
serde = { version = "1.0.197", features = ["derive"] }
serde_yml = "0.0.12"
serde_json = "1.0.115"
log = "0.4.21"
serde_derive = "1.0.197"
tempfile = "3.14.0"
num-traits=">=0.2"
chrono = "0.4.38"
bincode = "2.0.0-rc.3"
walkdir = "2"
gzp = "1.0.1"
thiserror = "2.0.16"
statrs = "0.18.0"
vectorize = "0.2.0"
