[package]
name = "common"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true


[lib]
doctest = false

[dependencies]
serde = { workspace = true }
serde_yml = { workspace = true }
serde_json = { workspace = true }
serde_derive = { workspace = true }
log = { workspace = true }
tempfile = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
flate2 = { workspace = true }
noodles = { workspace = true }
itertools = { workspace = true }
bincode = "2.0.0-rc.3"
statrs = "0.18.0"
vectorize = "0.2.0"
lazy_static = "1.5.0"
bstr = "1"
libdeflater = "1.25.2"

[dev-dependencies]
proptest = "1"
