[package]
name = "eidolon"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
eidolon-core = { path = "../eidolon-core" }
log = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
flate2 = { workspace = true }
noodles = { workspace = true }
itertools = { workspace = true }
rayon = { workspace = true }
simplelog = "0.12.2"
clap = { version = "4.5.1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"