[package]
name = "fasta_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
num-traits=">=0.2"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
smallvec = "1"
bit-set = "0.5.1"
itertools = ">=0.7"
log = "0.4"
common = { path = "../common" }

[dev-dependencies]
pretty_assertions = "1.3"
rand = "*"

[dependencies.boomphf]
version = "0.6"
features = ["serde"]