[package]
name = "rneat"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
log = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
flate2 = { workspace = true }
noodles = { workspace = true }
itertools = { workspace = true }
simplelog = "0.12.2"
clap = { version = "4.5.1", features = ["derive"] }
assert_fs = "1.1.1"
indicatif = { version = "0.18.0", features = ["rayon"] }
same-file = "1.0.6"
rust_search = "2.1.0"
noodles = { version = "0.109.0", features = ["bam", "sam", "bgzf", "core"] }

[dev-dependencies]