[package]
name = "simple_rng"
version.workspace = true
authors.workspace = true
description.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4.38"
# statrs = "0.17.1"
statrs = "0.18.0"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.16"
